Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;
C13DRVAPI LPSTR __stdcall C13_AsciiIncc(LPSTR asciistr);
C13DRVAPI BOOL __stdcall C13_AsciiIsLower(INT value);
C13DRVAPI BOOL __stdcall C13_AsciiIsRadix(LPCSTR asciistr,INT radixval);
C13DRVAPI INT __stdcall C13_AsciiLenVal(INT numbits,INT radixval);
C13DRVAPI INT __stdcall C13_AsciiToUpper(INT value);
C13DRVAPI ULONG __stdcall C13_AsciiToVal(LPCSTR asciistr,INT radixval);
C13DRVAPI VOID __stdcall C13_AsciiTrimLead(LPSTR buf);
C13DRVAPI VOID __stdcall C13_AsciiTrimTrail(LPSTR buf);
C13DRVAPI VOID __stdcall C13_AsciiTrimZero(LPSTR buf);
C13DRVAPI ERRVAL __stdcall C13_BCConfigEx(ULONG configval,USHORT count,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_BCConfigMsg(ULONG configval,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_BCCreateListEx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_BCCreateListExx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_BCGetMsg(INT index,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedAgain(SCHNDX index,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedBranch(USHORT condition,SCHNDX destindex,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedBranchDin0(SCHNDX destindex,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedBranchDin1(SCHNDX destindex,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedBranchEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BCSchedBuild(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedCall(SCHNDX destindex,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedCallCond(USHORT condition,SCHNDX destindex,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedCallCondEx(USHORT condition1,USHORT condition2,USHORT condition3,SCHNDX destindex,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedEntry(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedFrameEnd(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedFrameStart(ULONG timeval,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedGap(USHORT gapval,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedGoto(SCHNDX destindex,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedHalt(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedInt(USHORT tagval,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedIntCond(USHORT condition,USHORT tagval,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedIntCondEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT tagval,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedNop(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedPause(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedPulse(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedPulse0(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedPulse1(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedRestart(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedRetryEx(USHORT condition1,USHORT condition2,USHORT condition3,USHORT retryflag,USHORT retries,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedReturn(HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedUser(ULONG useraddr,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSetEntry(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BCSetTimeout(USHORT timeoutval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_BlkAddr(INT taval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_BlkOptRd(INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BlkOptWr(USHORT rtopt,INT taval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_BlkPtrRd(INT taval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_BlkPtrWr(ULONG descaddr,INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BlkRd(LPUSHORT block,INT taval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BlkReset(INT taval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_BlkSWDRd(INT taval,HCARD handleval);