Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.CS

        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiIncc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C13_AsciiIncc(ref string asciistr);
        public static string C13_AsciiIncc(ref string asciistr) { return Marshal.PtrToStringAnsi(_C13_AsciiIncc(ref asciistr)); }
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiIsLower@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_AsciiIsLower(Int32 value);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiIsRadix@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_AsciiIsRadix(ref string asciistr, Int32 radixval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiLenVal@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_AsciiLenVal(Int32 numbits, Int32 radixval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiToUpper@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_AsciiToUpper(Int32 value);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiToVal@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_AsciiToVal(ref string asciistr, Int32 radixval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiTrimLead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_AsciiTrimLead(ref string buf);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiTrimTrail@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_AsciiTrimTrail(ref string buf);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiTrimZero@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_AsciiTrimZero(ref string buf);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCConfigEx(UInt32 configval, UInt16 count, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCConfigMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_BCConfigMsg(UInt32 configval, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCCreateListEx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_BCCreateListEx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCCreateListExx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_BCCreateListExx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCGetMsg@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_BCGetMsg(Int32 index, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedAgain@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedAgain(Int32 index, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedBranch@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedBranch(UInt16 condition, Int32 destindex, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedBranchDin0@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedBranchDin0(Int32 destindex, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedBranchDin1@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedBranchDin1(Int32 destindex, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedBranchEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedBranchEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, Int32 destindex, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedBuild@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedBuild(UInt16 nummsgs, ref UInt32 msgaddr, ref UInt16 freq, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedCall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedCall(Int32 destindex, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedCallCond@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedCallCond(UInt16 condition, Int32 destindex, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedCallCondEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedCallCondEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, Int32 destindex, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedEntry@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedEntry(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedFrameEnd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedFrameEnd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedFrameStart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedFrameStart(UInt32 timeval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedGap@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedGap(UInt16 gapval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedGoto@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedGoto(Int32 destindex, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedHalt@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedHalt(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedInt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedInt(UInt16 tagval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedIntCond@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedIntCond(UInt16 condition, UInt16 tagval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedIntCondEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedIntCondEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 tagval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedNop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedNop(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedPause@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedPause(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedPulse@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedPulse(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedPulse0@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedPulse0(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedPulse1@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedPulse1(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedRestart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedRestart(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedRetryEx@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedRetryEx(UInt16 condition1, UInt16 condition2, UInt16 condition3, UInt16 retryflag, UInt16 retries, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedReturn@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedReturn(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedUser@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedUser(UInt32 useraddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSetEntry@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSetEntry(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSetTimeout@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSetTimeout(UInt16 timeoutval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BlkAddr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_BlkAddr(Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BlkOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_BlkOptRd(Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BlkOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BlkOptWr(UInt16 rtopt, Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BlkPtrRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_BlkPtrRd(Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BlkPtrWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_BlkPtrWr(UInt32 descaddr, Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BlkRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BlkRd(ref UInt16 block, Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BlkReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BlkReset(Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BlkSWDRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_BlkSWDRd(Int32 taval, UInt32 handleval);
